--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -3,7 +3,7 @@
 workflows:
   my-workflow:
     name: My workflow name
-    instance_type: mac_mini
+    instance_type: mac_mini_m1
     max_build_duration: 60
     environment:
       vars:
